[package]
name = "grpc-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0"
async-std = "^1.13"
async-stream = "^0.3"
rand = "^0.8.5"
tokio = "^1.41.0"
tokio-stream = "^0.1"
tonic = { version = "^0.12", features = [
  "transport",
  "tls",
  "tls-roots",
  "tls-webpki-roots",
] }
tracing = "^0.1"
tonic-build = "^0.12"
prost = "^0.13"
prost-types = "^0.13"
hex = "0.4.3"
serde = "1.0.215"
serde_json = "1.0.133"
base64 = "0.22.1"
elliptic-curve = "0.13.8"
generic-array = "0.14.0"
jwt = "0.16.0"
alloy = { version = "0.15.10", features = ["k256", "signers", "signer-keystore", "signer-local"] }
k256 = { version = "0.13.4" }
redact = "0.1.10"
component = "0.1.1"
rust-analyzer = "0.0.1"
rustls = { version = "^0.23.19", features = ["ring"] }

[build-dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
prost = "0.13.3"
prost-types = "0.13.3"
protox = "0.7.1"
tonic-build = "0.12.3"
